--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
+
 @import "tailwindcss";
+
+.font-russo {
+  font-family: 'Russo One', sans-serif;
+}
+
