--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Russo+One&display=swap');
+
+
 
 @import "tailwindcss";
 
@@ -8,3 +11,7 @@
   font-family: 'Russo One', sans-serif;
 }
 
+.font-Charmonman {
+  font-family: 'Charmonman', cursive;
+  font-weight: 700
+}
