--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Russo+One&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import "tailwindcss";
 
@@ -11,10 +10,21 @@
   font-family: 'Russo One', sans-serif;
 }
 
-.font-Charmonman {
+.font-charmonman {
   font-family: 'Charmonman', cursive;
-  font-weight: 700
+  font-weight: 700;
 }
+body {
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;        /* More readable */
+  line-height: 1.6;       /* Adds breathing space */
+ 
+}
+
+
 
 html {
   scroll-behavior: smooth;
