--- a/src/index.css
+++ b/src/index.css
@@ -19,14 +19,12 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-size: 18px;        /* More readable */
-  line-height: 1.6;       /* Adds breathing space */
+  font-size: 18px;        
+  line-height: 1.6;      
  
 }
 
 
 
-html {
-  scroll-behavior: smooth;
-}
+
 
